fixbug: content z-index

--- a/src/components/PageTemplate/Content/index.less
+++ b/src/components/PageTemplate/Content/index.less
@@ -2,7 +2,6 @@
   position: fixed;
   top: 7.5vh;
   left: 15%;
-  z-index: -1;
 
   width: 85%;
   height: calc(100vh - 7.5vh);
